added filter-table.js script to the template file

--- a/res/template.html
+++ b/res/template.html
@@ -20,6 +20,7 @@
     </div>
     <script src='jquery.min.js'></script>
     <script src='sticky-headers.js'></script>
+    <script src='filter-table.js'></script>
     <script type='application/javascript'>
       {{script}}
     </script>
